# WeixinCMake

./: CMakeLists.txt  README.md  Toolchain-Generic-arm.cmake
Mbedtls/: config-mbedtls.h
Mbedtls/include/mbedtls/: check_config.h  pk.h  pk_internal.h
ToolChain/linux/gcc-arm-none-eabi-9-2019-q4-major/arm-none-eabi/include/: pthread.h
ToolChain/linux/gcc-arm-none-eabi-9-2019-q4-major/arm-none-eabi/include/sys/: dirent.h  types.h
posix_include/FreeRTOS-Plus-POSIX/include/: FreeRTOS.h  FreeRTOSConfig.h  FreeRTOS_POSIX_internal.h  FreeRTOS_POSIX_types.h  portable.h  portmacro.h  task.h
posix_include/FreeRTOS-Plus-POSIX/include/portable/: FreeRTOS_POSIX_portable_default.h
posix_include/include/: dirent_custom.h  file_api.h
posix_include/include/FreeRTOS_POSIX/: pthread.h  signal.h  time.h
posix_include/include/private/: iot_doubly_linked_list.h
wechat_service/: CMakeLists.txt  wechat_main.cpp
weixin_port/: CMakeLists.txt
weixin_port/include/: AdamClientChannelImpl.h  adam_channel_common_define.h  adam_client_channel_zidl.h  weixin_channel.h
weixin_port/src/: AdamClientChannelImpl.cpp
